<resources>
    <string name="app_name">闲财鱼</string>
    <string name="title_home">主页</string>
    <string name="title_chat">消息</string>
    <string name="title_publish">发布</string>
    <string name="title_personal_info">我的</string>
    <string name="title_login">登录</string>
    <string name="title_sign_up">新用户注册</string>
    <string name="title_order_info">订单详情</string>

    <string name="category_book">书籍</string>
    <string name="category_makeup">化妆品</string>
    <string name="category_digital">数码产品</string>
    <string name="category_clothes">服饰</string>

    <string name="my_history">我的足迹</string>
    <string name="my_publish">我的发布</string>
    <string name="my_sale">我的卖出</string>
    <string name="my_order">我的购买</string>
    <string name="my_favorite">我的收藏</string>

    <string name="student_id">学号</string>
    <string name="password">密码</string>
    <string name="student_name">真实姓名</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="student_image">头像</string>
    <string name="product_description">商品描述</string>
    <string name="product_name">商品名称</string>
    <string name="product_price">价格</string>
    <string name="seller_name">卖家</string>
    <string name="credit">信用值</string>
    <string name="category">类别</string>
    <string name="product_new">全新</string>
    <string name="cannot_bargain">一口价</string>
    <string name="price_symbol">¥</string>
    <string name="price_number">0.00</string>
    <string name="order_number">订单号</string>
    <string name="order_time">下单时间</string>

    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_settings">设置</string>
    <string name="action_publish">发布</string>
    <string name="action_cancel">取消</string>
    <string name="action_log_out">退出登录</string>
    <string name="action_comment">留言</string>
    <string name="action_favorite">收藏</string>
    <string name="action_go_message">联系卖家</string>
    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_buy">创建订单</string>
    <string name="action_order_finish">交易完成</string>
    <string name="action_order_cancel">交易取消</string>
    <string name="action_give_credit">评价卖家</string>
    <string name="action_contact_admin">联系客服</string>
    <string name="action_finish">完成</string>
    <string name="action_credit">评分</string>

    <string name="invalid_student_id">不存在该学号</string>
    <string name="invalid_password">密码长度至少6位</string>
    <string name="invalid_product_name">商品标题不可为空</string>
    <string name="invalid_description">商品描述不可为空</string>
    <string name="invalid_price">尚未编辑商品价格</string>
    <string name="invalid_label">尚未编辑商品标签</string>
    <string name="invalid_category">尚未编辑商品类别</string>

    <string name="login_fail">"登录失败"</string>
    <string name="welcome">欢迎回来！</string>
    <string name="loading">......</string>
    <string name="describe_hint">"描述一下你的商品……"</string>
    <string name="credit_hint">"评价一下吧"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_order">MyOrderActivity</string>

    <string name="tab_order_ongoing">进行中</string>
    <string name="tab_order_no_credit">待评价</string>
    <string name="tab_order_all">全部</string>
    <string name="title_activity_information">Information</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_user">TA的</string>
    <string name="tab_assess">评价</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
