<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="发表评价"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="@dimen/square_img_size"
            android:layout_height="@dimen/square_img_size"
            android:src="@drawable/ic_no_image"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_credit"
            android:textSize="@dimen/text_size_big"/>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialRatingBar.RatingBar"/>

    </LinearLayout>

    <EditText
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/credit_hint"
        android:textColorHint="@color/gray"
        android:gravity="top"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingBottom="10dp"
        android:background="@color/white"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/orange"
        android:text="@string/action_publish"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"/>

</LinearLayout>